自助售货机模拟程序1.0.0

--- a/Canonical Answer/Functions/CMakeLists.txt
+++ b/Canonical Answer/Functions/CMakeLists.txt
@@ -3,6 +3,6 @@ file(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
 add_library(Functions ${files})
 
 
-target_include_directories(Functions INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(Functions PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 
